--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ disqus:
 #twitter: mytwitter
 # instagram: myinstagram
 # pinterest: mypinterest
-linkedin: in/enze-pan-0b069518b
+linkedin: enze-pan-0b069518b
 # youtube: myyoutube
 # spotify: myspotify
 github: gabrielpan147
@@ -50,7 +50,7 @@ github: gabrielpan147
 #medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: gabrielpan@ust.hk
+email: gabep.cn@gmail.com
 
 authors:
   johndoe:
